--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "CI= npm run _build",
+    "_build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
